afll_miniproject/PLY_JAVA/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> var_decl
Rule 2     statement -> array_decl
Rule 3     statement -> object_creation
Rule 4     statement -> while_loop
Rule 5     statement -> do_while_loop
Rule 6     statement -> for_loop
Rule 7     statement -> class_def
Rule 8     var_decl -> type ID SEMI
Rule 9     var_decl -> type ID EQUAL literal SEMI
Rule 10    array_decl -> type LBRACKET RBRACKET ID SEMI
Rule 11    array_decl -> type LBRACKET RBRACKET ID EQUAL LBRACE literal_list RBRACE SEMI
Rule 12    array_decl -> type LBRACKET RBRACKET ID EQUAL NEW type LBRACKET INT_LITERAL RBRACKET SEMI
Rule 13    literal_list -> literal
Rule 14    literal_list -> literal_list COMMA literal
Rule 15    object_creation -> type ID EQUAL NEW ID LPAREN RPAREN SEMI
Rule 16    object_creation -> ID ID EQUAL NEW ID LPAREN RPAREN SEMI
Rule 17    class_def -> CLASS ID LBRACE class_body RBRACE
Rule 18    class_def -> CLASS ID LBRACE RBRACE
Rule 19    class_body -> class_member
Rule 20    class_body -> class_body class_member
Rule 21    class_member -> var_decl
Rule 22    class_member -> method_decl
Rule 23    method_decl -> type ID LPAREN param_list_opt RPAREN LBRACE RBRACE
Rule 24    param_list_opt -> param_list
Rule 25    param_list_opt -> empty
Rule 26    param_list -> type ID
Rule 27    param_list -> param_list COMMA type ID
Rule 28    while_loop -> WHILE LPAREN condition RPAREN LBRACE RBRACE
Rule 29    do_while_loop -> DO LBRACE RBRACE WHILE LPAREN condition RPAREN SEMI
Rule 30    for_loop -> FOR LPAREN var_decl condition SEMI ID PLUSPLUS RPAREN LBRACE RBRACE
Rule 31    condition -> TRUE
Rule 32    condition -> FALSE
Rule 33    condition -> ID
Rule 34    condition -> literal
Rule 35    condition -> ID LT literal
Rule 36    condition -> ID LT ID
Rule 37    literal -> INT_LITERAL
Rule 38    literal -> FLOAT_LITERAL
Rule 39    literal -> CHAR_LITERAL
Rule 40    literal -> STRING_LITERAL
Rule 41    literal -> TRUE
Rule 42    literal -> FALSE
Rule 43    type -> INT
Rule 44    type -> FLOAT
Rule 45    type -> DOUBLE
Rule 46    type -> CHAR_T
Rule 47    type -> STRING_T
Rule 48    type -> BOOLEAN_T
Rule 49    empty -> <empty>

Terminals, with rules where they appear

BOOLEAN_T            : 48
CHAR_LITERAL         : 39
CHAR_T               : 46
CLASS                : 17 18
COMMA                : 14 27
DO                   : 29
DOUBLE               : 45
EQUAL                : 9 11 12 15 16
FALSE                : 32 42
FLOAT                : 44
FLOAT_LITERAL        : 38
FOR                  : 30
ID                   : 8 9 10 11 12 15 15 16 16 16 17 18 23 26 27 30 33 35 36 36
INT                  : 43
INT_LITERAL          : 12 37
LBRACE               : 11 17 18 23 28 29 30
LBRACKET             : 10 11 12 12
LPAREN               : 15 16 23 28 29 30
LT                   : 35 36
NEW                  : 12 15 16
PLUSPLUS             : 30
RBRACE               : 11 17 18 23 28 29 30
RBRACKET             : 10 11 12 12
RPAREN               : 15 16 23 28 29 30
SEMI                 : 8 9 10 11 12 15 16 29 30
STRING_LITERAL       : 40
STRING_T             : 47
TRUE                 : 31 41
WHILE                : 28 29
error                : 

Nonterminals, with rules where they appear

array_decl           : 2
class_body           : 17 20
class_def            : 7
class_member         : 19 20
condition            : 28 29 30
do_while_loop        : 5
empty                : 25
for_loop             : 6
literal              : 9 13 14 34 35
literal_list         : 11 14
method_decl          : 22
object_creation      : 3
param_list           : 24 27
param_list_opt       : 23
statement            : 0
type                 : 8 9 10 11 12 12 15 23 26 27
var_decl             : 1 21 30
while_loop           : 4

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . var_decl
    (2) statement -> . array_decl
    (3) statement -> . object_creation
    (4) statement -> . while_loop
    (5) statement -> . do_while_loop
    (6) statement -> . for_loop
    (7) statement -> . class_def
    (8) var_decl -> . type ID SEMI
    (9) var_decl -> . type ID EQUAL literal SEMI
    (10) array_decl -> . type LBRACKET RBRACKET ID SEMI
    (11) array_decl -> . type LBRACKET RBRACKET ID EQUAL LBRACE literal_list RBRACE SEMI
    (12) array_decl -> . type LBRACKET RBRACKET ID EQUAL NEW type LBRACKET INT_LITERAL RBRACKET SEMI
    (15) object_creation -> . type ID EQUAL NEW ID LPAREN RPAREN SEMI
    (16) object_creation -> . ID ID EQUAL NEW ID LPAREN RPAREN SEMI
    (28) while_loop -> . WHILE LPAREN condition RPAREN LBRACE RBRACE
    (29) do_while_loop -> . DO LBRACE RBRACE WHILE LPAREN condition RPAREN SEMI
    (30) for_loop -> . FOR LPAREN var_decl condition SEMI ID PLUSPLUS RPAREN LBRACE RBRACE
    (17) class_def -> . CLASS ID LBRACE class_body RBRACE
    (18) class_def -> . CLASS ID LBRACE RBRACE
    (43) type -> . INT
    (44) type -> . FLOAT
    (45) type -> . DOUBLE
    (46) type -> . CHAR_T
    (47) type -> . STRING_T
    (48) type -> . BOOLEAN_T

    ID              shift and go to state 10
    WHILE           shift and go to state 11
    DO              shift and go to state 12
    FOR             shift and go to state 13
    CLASS           shift and go to state 14
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    DOUBLE          shift and go to state 17
    CHAR_T          shift and go to state 18
    STRING_T        shift and go to state 19
    BOOLEAN_T       shift and go to state 20

    statement                      shift and go to state 1
    var_decl                       shift and go to state 2
    array_decl                     shift and go to state 3
    object_creation                shift and go to state 4
    while_loop                     shift and go to state 5
    do_while_loop                  shift and go to state 6
    for_loop                       shift and go to state 7
    class_def                      shift and go to state 8
    type                           shift and go to state 9

state 1

    (0) S' -> statement .



state 2

    (1) statement -> var_decl .

    $end            reduce using rule 1 (statement -> var_decl .)


state 3

    (2) statement -> array_decl .

    $end            reduce using rule 2 (statement -> array_decl .)


state 4

    (3) statement -> object_creation .

    $end            reduce using rule 3 (statement -> object_creation .)


state 5

    (4) statement -> while_loop .

    $end            reduce using rule 4 (statement -> while_loop .)


state 6

    (5) statement -> do_while_loop .

    $end            reduce using rule 5 (statement -> do_while_loop .)


state 7

    (6) statement -> for_loop .

    $end            reduce using rule 6 (statement -> for_loop .)


state 8

    (7) statement -> class_def .

    $end            reduce using rule 7 (statement -> class_def .)


state 9

    (8) var_decl -> type . ID SEMI
    (9) var_decl -> type . ID EQUAL literal SEMI
    (10) array_decl -> type . LBRACKET RBRACKET ID SEMI
    (11) array_decl -> type . LBRACKET RBRACKET ID EQUAL LBRACE literal_list RBRACE SEMI
    (12) array_decl -> type . LBRACKET RBRACKET ID EQUAL NEW type LBRACKET INT_LITERAL RBRACKET SEMI
    (15) object_creation -> type . ID EQUAL NEW ID LPAREN RPAREN SEMI

    ID              shift and go to state 21
    LBRACKET        shift and go to state 22


state 10

    (16) object_creation -> ID . ID EQUAL NEW ID LPAREN RPAREN SEMI

    ID              shift and go to state 23


state 11

    (28) while_loop -> WHILE . LPAREN condition RPAREN LBRACE RBRACE

    LPAREN          shift and go to state 24


state 12

    (29) do_while_loop -> DO . LBRACE RBRACE WHILE LPAREN condition RPAREN SEMI

    LBRACE          shift and go to state 25


state 13

    (30) for_loop -> FOR . LPAREN var_decl condition SEMI ID PLUSPLUS RPAREN LBRACE RBRACE

    LPAREN          shift and go to state 26


state 14

    (17) class_def -> CLASS . ID LBRACE class_body RBRACE
    (18) class_def -> CLASS . ID LBRACE RBRACE

    ID              shift and go to state 27


state 15

    (43) type -> INT .

    ID              reduce using rule 43 (type -> INT .)
    LBRACKET        reduce using rule 43 (type -> INT .)


state 16

    (44) type -> FLOAT .

    ID              reduce using rule 44 (type -> FLOAT .)
    LBRACKET        reduce using rule 44 (type -> FLOAT .)


state 17

    (45) type -> DOUBLE .

    ID              reduce using rule 45 (type -> DOUBLE .)
    LBRACKET        reduce using rule 45 (type -> DOUBLE .)


state 18

    (46) type -> CHAR_T .

    ID              reduce using rule 46 (type -> CHAR_T .)
    LBRACKET        reduce using rule 46 (type -> CHAR_T .)


state 19

    (47) type -> STRING_T .

    ID              reduce using rule 47 (type -> STRING_T .)
    LBRACKET        reduce using rule 47 (type -> STRING_T .)


state 20

    (48) type -> BOOLEAN_T .

    ID              reduce using rule 48 (type -> BOOLEAN_T .)
    LBRACKET        reduce using rule 48 (type -> BOOLEAN_T .)


state 21

    (8) var_decl -> type ID . SEMI
    (9) var_decl -> type ID . EQUAL literal SEMI
    (15) object_creation -> type ID . EQUAL NEW ID LPAREN RPAREN SEMI

    SEMI            shift and go to state 28
    EQUAL           shift and go to state 29


state 22

    (10) array_decl -> type LBRACKET . RBRACKET ID SEMI
    (11) array_decl -> type LBRACKET . RBRACKET ID EQUAL LBRACE literal_list RBRACE SEMI
    (12) array_decl -> type LBRACKET . RBRACKET ID EQUAL NEW type LBRACKET INT_LITERAL RBRACKET SEMI

    RBRACKET        shift and go to state 30


state 23

    (16) object_creation -> ID ID . EQUAL NEW ID LPAREN RPAREN SEMI

    EQUAL           shift and go to state 31


state 24

    (28) while_loop -> WHILE LPAREN . condition RPAREN LBRACE RBRACE
    (31) condition -> . TRUE
    (32) condition -> . FALSE
    (33) condition -> . ID
    (34) condition -> . literal
    (35) condition -> . ID LT literal
    (36) condition -> . ID LT ID
    (37) literal -> . INT_LITERAL
    (38) literal -> . FLOAT_LITERAL
    (39) literal -> . CHAR_LITERAL
    (40) literal -> . STRING_LITERAL
    (41) literal -> . TRUE
    (42) literal -> . FALSE

    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    ID              shift and go to state 35
    INT_LITERAL     shift and go to state 37
    FLOAT_LITERAL   shift and go to state 38
    CHAR_LITERAL    shift and go to state 39
    STRING_LITERAL  shift and go to state 40

    condition                      shift and go to state 32
    literal                        shift and go to state 36

state 25

    (29) do_while_loop -> DO LBRACE . RBRACE WHILE LPAREN condition RPAREN SEMI

    RBRACE          shift and go to state 41


state 26

    (30) for_loop -> FOR LPAREN . var_decl condition SEMI ID PLUSPLUS RPAREN LBRACE RBRACE
    (8) var_decl -> . type ID SEMI
    (9) var_decl -> . type ID EQUAL literal SEMI
    (43) type -> . INT
    (44) type -> . FLOAT
    (45) type -> . DOUBLE
    (46) type -> . CHAR_T
    (47) type -> . STRING_T
    (48) type -> . BOOLEAN_T

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    DOUBLE          shift and go to state 17
    CHAR_T          shift and go to state 18
    STRING_T        shift and go to state 19
    BOOLEAN_T       shift and go to state 20

    var_decl                       shift and go to state 42
    type                           shift and go to state 43

state 27

    (17) class_def -> CLASS ID . LBRACE class_body RBRACE
    (18) class_def -> CLASS ID . LBRACE RBRACE

    LBRACE          shift and go to state 44


state 28

    (8) var_decl -> type ID SEMI .

    $end            reduce using rule 8 (var_decl -> type ID SEMI .)
    TRUE            reduce using rule 8 (var_decl -> type ID SEMI .)
    FALSE           reduce using rule 8 (var_decl -> type ID SEMI .)
    ID              reduce using rule 8 (var_decl -> type ID SEMI .)
    INT_LITERAL     reduce using rule 8 (var_decl -> type ID SEMI .)
    FLOAT_LITERAL   reduce using rule 8 (var_decl -> type ID SEMI .)
    CHAR_LITERAL    reduce using rule 8 (var_decl -> type ID SEMI .)
    STRING_LITERAL  reduce using rule 8 (var_decl -> type ID SEMI .)
    RBRACE          reduce using rule 8 (var_decl -> type ID SEMI .)
    INT             reduce using rule 8 (var_decl -> type ID SEMI .)
    FLOAT           reduce using rule 8 (var_decl -> type ID SEMI .)
    DOUBLE          reduce using rule 8 (var_decl -> type ID SEMI .)
    CHAR_T          reduce using rule 8 (var_decl -> type ID SEMI .)
    STRING_T        reduce using rule 8 (var_decl -> type ID SEMI .)
    BOOLEAN_T       reduce using rule 8 (var_decl -> type ID SEMI .)


state 29

    (9) var_decl -> type ID EQUAL . literal SEMI
    (15) object_creation -> type ID EQUAL . NEW ID LPAREN RPAREN SEMI
    (37) literal -> . INT_LITERAL
    (38) literal -> . FLOAT_LITERAL
    (39) literal -> . CHAR_LITERAL
    (40) literal -> . STRING_LITERAL
    (41) literal -> . TRUE
    (42) literal -> . FALSE

    NEW             shift and go to state 46
    INT_LITERAL     shift and go to state 37
    FLOAT_LITERAL   shift and go to state 38
    CHAR_LITERAL    shift and go to state 39
    STRING_LITERAL  shift and go to state 40
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    literal                        shift and go to state 45

state 30

    (10) array_decl -> type LBRACKET RBRACKET . ID SEMI
    (11) array_decl -> type LBRACKET RBRACKET . ID EQUAL LBRACE literal_list RBRACE SEMI
    (12) array_decl -> type LBRACKET RBRACKET . ID EQUAL NEW type LBRACKET INT_LITERAL RBRACKET SEMI

    ID              shift and go to state 49


state 31

    (16) object_creation -> ID ID EQUAL . NEW ID LPAREN RPAREN SEMI

    NEW             shift and go to state 50


state 32

    (28) while_loop -> WHILE LPAREN condition . RPAREN LBRACE RBRACE

    RPAREN          shift and go to state 51


state 33

    (31) condition -> TRUE .
    (41) literal -> TRUE .

  ! reduce/reduce conflict for RPAREN resolved using rule 31 (condition -> TRUE .)
  ! reduce/reduce conflict for SEMI resolved using rule 31 (condition -> TRUE .)
    RPAREN          reduce using rule 31 (condition -> TRUE .)
    SEMI            reduce using rule 31 (condition -> TRUE .)

  ! RPAREN          [ reduce using rule 41 (literal -> TRUE .) ]
  ! SEMI            [ reduce using rule 41 (literal -> TRUE .) ]


state 34

    (32) condition -> FALSE .
    (42) literal -> FALSE .

  ! reduce/reduce conflict for RPAREN resolved using rule 32 (condition -> FALSE .)
  ! reduce/reduce conflict for SEMI resolved using rule 32 (condition -> FALSE .)
    RPAREN          reduce using rule 32 (condition -> FALSE .)
    SEMI            reduce using rule 32 (condition -> FALSE .)

  ! RPAREN          [ reduce using rule 42 (literal -> FALSE .) ]
  ! SEMI            [ reduce using rule 42 (literal -> FALSE .) ]


state 35

    (33) condition -> ID .
    (35) condition -> ID . LT literal
    (36) condition -> ID . LT ID

    RPAREN          reduce using rule 33 (condition -> ID .)
    SEMI            reduce using rule 33 (condition -> ID .)
    LT              shift and go to state 52


state 36

    (34) condition -> literal .

    RPAREN          reduce using rule 34 (condition -> literal .)
    SEMI            reduce using rule 34 (condition -> literal .)


state 37

    (37) literal -> INT_LITERAL .

    RPAREN          reduce using rule 37 (literal -> INT_LITERAL .)
    SEMI            reduce using rule 37 (literal -> INT_LITERAL .)
    RBRACE          reduce using rule 37 (literal -> INT_LITERAL .)
    COMMA           reduce using rule 37 (literal -> INT_LITERAL .)


state 38

    (38) literal -> FLOAT_LITERAL .

    RPAREN          reduce using rule 38 (literal -> FLOAT_LITERAL .)
    SEMI            reduce using rule 38 (literal -> FLOAT_LITERAL .)
    RBRACE          reduce using rule 38 (literal -> FLOAT_LITERAL .)
    COMMA           reduce using rule 38 (literal -> FLOAT_LITERAL .)


state 39

    (39) literal -> CHAR_LITERAL .

    RPAREN          reduce using rule 39 (literal -> CHAR_LITERAL .)
    SEMI            reduce using rule 39 (literal -> CHAR_LITERAL .)
    RBRACE          reduce using rule 39 (literal -> CHAR_LITERAL .)
    COMMA           reduce using rule 39 (literal -> CHAR_LITERAL .)


state 40

    (40) literal -> STRING_LITERAL .

    RPAREN          reduce using rule 40 (literal -> STRING_LITERAL .)
    SEMI            reduce using rule 40 (literal -> STRING_LITERAL .)
    RBRACE          reduce using rule 40 (literal -> STRING_LITERAL .)
    COMMA           reduce using rule 40 (literal -> STRING_LITERAL .)


state 41

    (29) do_while_loop -> DO LBRACE RBRACE . WHILE LPAREN condition RPAREN SEMI

    WHILE           shift and go to state 53


state 42

    (30) for_loop -> FOR LPAREN var_decl . condition SEMI ID PLUSPLUS RPAREN LBRACE RBRACE
    (31) condition -> . TRUE
    (32) condition -> . FALSE
    (33) condition -> . ID
    (34) condition -> . literal
    (35) condition -> . ID LT literal
    (36) condition -> . ID LT ID
    (37) literal -> . INT_LITERAL
    (38) literal -> . FLOAT_LITERAL
    (39) literal -> . CHAR_LITERAL
    (40) literal -> . STRING_LITERAL
    (41) literal -> . TRUE
    (42) literal -> . FALSE

    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    ID              shift and go to state 35
    INT_LITERAL     shift and go to state 37
    FLOAT_LITERAL   shift and go to state 38
    CHAR_LITERAL    shift and go to state 39
    STRING_LITERAL  shift and go to state 40

    condition                      shift and go to state 54
    literal                        shift and go to state 36

state 43

    (8) var_decl -> type . ID SEMI
    (9) var_decl -> type . ID EQUAL literal SEMI

    ID              shift and go to state 55


state 44

    (17) class_def -> CLASS ID LBRACE . class_body RBRACE
    (18) class_def -> CLASS ID LBRACE . RBRACE
    (19) class_body -> . class_member
    (20) class_body -> . class_body class_member
    (21) class_member -> . var_decl
    (22) class_member -> . method_decl
    (8) var_decl -> . type ID SEMI
    (9) var_decl -> . type ID EQUAL literal SEMI
    (23) method_decl -> . type ID LPAREN param_list_opt RPAREN LBRACE RBRACE
    (43) type -> . INT
    (44) type -> . FLOAT
    (45) type -> . DOUBLE
    (46) type -> . CHAR_T
    (47) type -> . STRING_T
    (48) type -> . BOOLEAN_T

    RBRACE          shift and go to state 57
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    DOUBLE          shift and go to state 17
    CHAR_T          shift and go to state 18
    STRING_T        shift and go to state 19
    BOOLEAN_T       shift and go to state 20

    class_body                     shift and go to state 56
    class_member                   shift and go to state 58
    var_decl                       shift and go to state 59
    method_decl                    shift and go to state 60
    type                           shift and go to state 61

state 45

    (9) var_decl -> type ID EQUAL literal . SEMI

    SEMI            shift and go to state 62


state 46

    (15) object_creation -> type ID EQUAL NEW . ID LPAREN RPAREN SEMI

    ID              shift and go to state 63


state 47

    (41) literal -> TRUE .

    SEMI            reduce using rule 41 (literal -> TRUE .)
    RPAREN          reduce using rule 41 (literal -> TRUE .)
    RBRACE          reduce using rule 41 (literal -> TRUE .)
    COMMA           reduce using rule 41 (literal -> TRUE .)


state 48

    (42) literal -> FALSE .

    SEMI            reduce using rule 42 (literal -> FALSE .)
    RPAREN          reduce using rule 42 (literal -> FALSE .)
    RBRACE          reduce using rule 42 (literal -> FALSE .)
    COMMA           reduce using rule 42 (literal -> FALSE .)


state 49

    (10) array_decl -> type LBRACKET RBRACKET ID . SEMI
    (11) array_decl -> type LBRACKET RBRACKET ID . EQUAL LBRACE literal_list RBRACE SEMI
    (12) array_decl -> type LBRACKET RBRACKET ID . EQUAL NEW type LBRACKET INT_LITERAL RBRACKET SEMI

    SEMI            shift and go to state 64
    EQUAL           shift and go to state 65


state 50

    (16) object_creation -> ID ID EQUAL NEW . ID LPAREN RPAREN SEMI

    ID              shift and go to state 66


state 51

    (28) while_loop -> WHILE LPAREN condition RPAREN . LBRACE RBRACE

    LBRACE          shift and go to state 67


state 52

    (35) condition -> ID LT . literal
    (36) condition -> ID LT . ID
    (37) literal -> . INT_LITERAL
    (38) literal -> . FLOAT_LITERAL
    (39) literal -> . CHAR_LITERAL
    (40) literal -> . STRING_LITERAL
    (41) literal -> . TRUE
    (42) literal -> . FALSE

    ID              shift and go to state 68
    INT_LITERAL     shift and go to state 37
    FLOAT_LITERAL   shift and go to state 38
    CHAR_LITERAL    shift and go to state 39
    STRING_LITERAL  shift and go to state 40
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    literal                        shift and go to state 69

state 53

    (29) do_while_loop -> DO LBRACE RBRACE WHILE . LPAREN condition RPAREN SEMI

    LPAREN          shift and go to state 70


state 54

    (30) for_loop -> FOR LPAREN var_decl condition . SEMI ID PLUSPLUS RPAREN LBRACE RBRACE

    SEMI            shift and go to state 71


state 55

    (8) var_decl -> type ID . SEMI
    (9) var_decl -> type ID . EQUAL literal SEMI

    SEMI            shift and go to state 28
    EQUAL           shift and go to state 72


state 56

    (17) class_def -> CLASS ID LBRACE class_body . RBRACE
    (20) class_body -> class_body . class_member
    (21) class_member -> . var_decl
    (22) class_member -> . method_decl
    (8) var_decl -> . type ID SEMI
    (9) var_decl -> . type ID EQUAL literal SEMI
    (23) method_decl -> . type ID LPAREN param_list_opt RPAREN LBRACE RBRACE
    (43) type -> . INT
    (44) type -> . FLOAT
    (45) type -> . DOUBLE
    (46) type -> . CHAR_T
    (47) type -> . STRING_T
    (48) type -> . BOOLEAN_T

    RBRACE          shift and go to state 73
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    DOUBLE          shift and go to state 17
    CHAR_T          shift and go to state 18
    STRING_T        shift and go to state 19
    BOOLEAN_T       shift and go to state 20

    class_member                   shift and go to state 74
    var_decl                       shift and go to state 59
    method_decl                    shift and go to state 60
    type                           shift and go to state 61

state 57

    (18) class_def -> CLASS ID LBRACE RBRACE .

    $end            reduce using rule 18 (class_def -> CLASS ID LBRACE RBRACE .)


state 58

    (19) class_body -> class_member .

    RBRACE          reduce using rule 19 (class_body -> class_member .)
    INT             reduce using rule 19 (class_body -> class_member .)
    FLOAT           reduce using rule 19 (class_body -> class_member .)
    DOUBLE          reduce using rule 19 (class_body -> class_member .)
    CHAR_T          reduce using rule 19 (class_body -> class_member .)
    STRING_T        reduce using rule 19 (class_body -> class_member .)
    BOOLEAN_T       reduce using rule 19 (class_body -> class_member .)


state 59

    (21) class_member -> var_decl .

    RBRACE          reduce using rule 21 (class_member -> var_decl .)
    INT             reduce using rule 21 (class_member -> var_decl .)
    FLOAT           reduce using rule 21 (class_member -> var_decl .)
    DOUBLE          reduce using rule 21 (class_member -> var_decl .)
    CHAR_T          reduce using rule 21 (class_member -> var_decl .)
    STRING_T        reduce using rule 21 (class_member -> var_decl .)
    BOOLEAN_T       reduce using rule 21 (class_member -> var_decl .)


state 60

    (22) class_member -> method_decl .

    RBRACE          reduce using rule 22 (class_member -> method_decl .)
    INT             reduce using rule 22 (class_member -> method_decl .)
    FLOAT           reduce using rule 22 (class_member -> method_decl .)
    DOUBLE          reduce using rule 22 (class_member -> method_decl .)
    CHAR_T          reduce using rule 22 (class_member -> method_decl .)
    STRING_T        reduce using rule 22 (class_member -> method_decl .)
    BOOLEAN_T       reduce using rule 22 (class_member -> method_decl .)


state 61

    (8) var_decl -> type . ID SEMI
    (9) var_decl -> type . ID EQUAL literal SEMI
    (23) method_decl -> type . ID LPAREN param_list_opt RPAREN LBRACE RBRACE

    ID              shift and go to state 75


state 62

    (9) var_decl -> type ID EQUAL literal SEMI .

    $end            reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    TRUE            reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    FALSE           reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    ID              reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    INT_LITERAL     reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    FLOAT_LITERAL   reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    CHAR_LITERAL    reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    STRING_LITERAL  reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    RBRACE          reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    INT             reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    FLOAT           reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    DOUBLE          reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    CHAR_T          reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    STRING_T        reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)
    BOOLEAN_T       reduce using rule 9 (var_decl -> type ID EQUAL literal SEMI .)


state 63

    (15) object_creation -> type ID EQUAL NEW ID . LPAREN RPAREN SEMI

    LPAREN          shift and go to state 76


state 64

    (10) array_decl -> type LBRACKET RBRACKET ID SEMI .

    $end            reduce using rule 10 (array_decl -> type LBRACKET RBRACKET ID SEMI .)


state 65

    (11) array_decl -> type LBRACKET RBRACKET ID EQUAL . LBRACE literal_list RBRACE SEMI
    (12) array_decl -> type LBRACKET RBRACKET ID EQUAL . NEW type LBRACKET INT_LITERAL RBRACKET SEMI

    LBRACE          shift and go to state 77
    NEW             shift and go to state 78


state 66

    (16) object_creation -> ID ID EQUAL NEW ID . LPAREN RPAREN SEMI

    LPAREN          shift and go to state 79


state 67

    (28) while_loop -> WHILE LPAREN condition RPAREN LBRACE . RBRACE

    RBRACE          shift and go to state 80


state 68

    (36) condition -> ID LT ID .

    RPAREN          reduce using rule 36 (condition -> ID LT ID .)
    SEMI            reduce using rule 36 (condition -> ID LT ID .)


state 69

    (35) condition -> ID LT literal .

    RPAREN          reduce using rule 35 (condition -> ID LT literal .)
    SEMI            reduce using rule 35 (condition -> ID LT literal .)


state 70
